@@ -2,11 +2,11 @@ description = "XDATA pipeline operations"
 group = "software.uncharted.xdata"
 version = "0.1-SNAPSHOT"
 
-// projedt level shared version variables
+// project level shared version variables
 ext {
   dependencyScalaVersion = "2.10"
-  scalaVersion = "2.10.3"
-  sparkVersion = "1.3.0-cdh5.4.1"
+  scalaVersion = "2.10.6"
+  sparkVersion = "1.5.2"
 }
 
 // extra jars for plugins
@@ -58,6 +58,7 @@ task wrapper(type: Wrapper) {
 // extra configurations
 configurations {
   provided
+  compile.extendsFrom provided
   dist
 }
 
@@ -86,7 +87,27 @@ scalaStyle {
 
 // configure scoverage plugin
 checkScoverage {
-  minimumRate = 1.0
+  minimumRate = 0.75
+}
+
+// Test and scoverage tests should be forced to single threaded execution
+// since Spark can't run multiple contexts within in a single JVM.  Exclude
+// s3 tests by default since it depends on the definition of AWS_ACCESS_KEY
+// and AWS_SECRET env variables and corresponding S3 resources.
+test {
+  maxParallelForks = 1
+  jvmArgs += ["-XX:MaxPermSize=512m", "-Xmx1000m"]
+  tags {
+    exclude 's3.test'
+  }
+}
+
+testScoverage {
+  maxParallelForks = 1
+  jvmArgs += ["-XX:MaxPermSize=512m", "-Xmx1000m"]
+  tags {
+    exclude 's3.test'
+  }
 }
 
 // Creation of a distribution archive containing the pipeline assembly jar and the baseline
@@ -125,12 +146,17 @@ repositories {
   }
 }
 
-// Jars this project depends on.
+// Jars this project depends on
 dependencies {
 	// Compile config - needed to build and required at runtime
-  compile "software.uncharted.salt:salt-core:1.0.0"
-  compile "software.uncharted.sparkpipe:sparkpipe-core:0.9.0"
-	compile "org.clapper:grizzled-slf4j_2.10:1.0.2"
+  compile "software.uncharted.salt:salt-core:1.1.0"
+  compile "software.uncharted.sparkpipe:sparkpipe-core:0.9.4"
+	compile "org.clapper:grizzled-slf4j_$dependencyScalaVersion:1.0.2"
+  compile 'log4j:apache-log4j-extras:1.2.17'
+  compile "org.spire-math:spire_$dependencyScalaVersion:0.11.0"
+  compile "com.amazonaws:aws-java-sdk:1.3.11"
+  compile "com.databricks:spark-csv_$dependencyScalaVersion:1.3.0"
+  compile "net.liftweb:lift-json_$dependencyScalaVersion:2.6.2"
 
   // Provided config - needed to compile, expected to be available when deployed
   provided "org.apache.spark:spark-core_$dependencyScalaVersion:$sparkVersion"
